--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     return;
                 }
 
-                const response = await fetch('http://localhost:3000/plan-trip', {
+                const response = await fetch('https://adventura-70fm.onrender.com/plan-trip', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
