--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                 // Optionally, add a "Save Plan" button
                 const saveButton = document.createElement('button');
                 saveButton.textContent = 'Reserve';
-                saveButton.classList.add('reserve-button');
+                saveButton.classList.add('save-plan-button');
                 saveButton.addEventListener('click', () => {
                     // Collect selected activities
                     const selectedActivities = [];
