--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@
                 <div class="preferences-options" data-preference-group="environment">
                     <button class="preference-button" data-value="city">City</button>
                     <button class="preference-button" data-value="nature">Nature</button>
+                    <button class="preference-button" data-value="both">Both City & Nature</button>
                 </div>
             </div>
 
