--- a/index.html
+++ b/index.html
@@ -166,6 +166,33 @@
         margin: 2rem 0;
         cursor: pointer;
         font-size: 1rem;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .start-planning:disabled {
+        background: #ccc;
+        cursor: not-allowed;
+    }
+
+    .loading-spinner {
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        border: 3px solid rgba(255,255,255,0.3);
+        border-radius: 50%;
+        border-top-color: #fff;
+        animation: spin 1s ease-in-out infinite;
+        margin-left: 10px;
+        vertical-align: middle;
+    }
+
+    @keyframes spin {
+        to { transform: rotate(360deg); }
+    }
+
+    .loading-text {
+        margin-left: 10px;
     }
 
     /* Add container styles */
@@ -571,7 +598,18 @@
         });
 
         document.getElementById('start-planning-button').addEventListener('click', async () => {
+            const button = document.getElementById('start-planning-button');
+            const originalText = button.textContent;
+            
             try {
+                // Disable button and show loading state
+                button.disabled = true;
+                button.innerHTML = `
+                    Planning
+                    <span class="loading-spinner"></span>
+                    <span class="loading-text">Please wait...</span>
+                `;
+
                 const destination = document.getElementById('destination-input').value;
 
                 // Validate input
@@ -685,9 +723,19 @@
 
                 responseContainer.appendChild(saveButton);
 
+                // After content is loaded, scroll to the response
+                responseContainer.scrollIntoView({ 
+                    behavior: 'smooth', 
+                    block: 'start'
+                });
+
             } catch (error) {
                 console.error('Error:', error);
                 alert('Something went wrong. Please try again later.');
+            } finally {
+                // Reset button state
+                button.disabled = false;
+                button.innerHTML = originalText;
             }
         });
 
